--- a/lib/po/vi.po
+++ b/lib/po/vi.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libgsasl 0.2.8-b20050829\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2005-08-29 01:49+0200\n"
+"POT-Creation-Date: 2006-03-08 12:33+0100\n"
 "PO-Revision-Date: 2005-09-13 14:03+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net>\n"
@@ -37,32 +37,74 @@ msgstr "Lỗi mã cơ số 64 trong thư viện SASL"
 msgid "Low-level crypto error in SASL library"
 msgstr "Lỗi mã hóa mức thập trong thư viện SASL"
 
-msgid "GSSAPI library could not deallocate memory in gss_release_buffer() in SASL library.  This is a serious internal error."
-msgstr "Thư viện GSSAPI không thể bỏ cấp phát bộ nhớ trong bộ đệm « gss_release_buffer() » trong thư viện SASL. Đây là lỗi nội bộ nghiêm trọng."
+msgid ""
+"GSSAPI library could not deallocate memory in gss_release_buffer() in SASL "
+"library.  This is a serious internal error."
+msgstr ""
+"Thư viện GSSAPI không thể bỏ cấp phát bộ nhớ trong bộ đệm « "
+"gss_release_buffer() » trong thư viện SASL. Đây là lỗi nội bộ nghiêm trọng."
 
-msgid "GSSAPI library could not understand a peer name in gss_import_name() in SASL library.  This may be due to incorrect user supplied data."
-msgstr "Thư viện GSSAPI không thể hiểu một tên ngang hàng trong « gss_import_name() » trong thư viện SASL. Có thể vì người dùng cung cấp dữ liệu không đúng."
+msgid ""
+"GSSAPI library could not understand a peer name in gss_import_name() in SASL "
+"library.  This may be due to incorrect user supplied data."
+msgstr ""
+"Thư viện GSSAPI không thể hiểu một tên ngang hàng trong « gss_import_name() "
+"» trong thư viện SASL. Có thể vì người dùng cung cấp dữ liệu không đúng."
 
-msgid "GSSAPI error in client while negotiating security context in gss_init_sec_context() in SASL library.  This is most likely due insufficient credentials or malicious interactions."
-msgstr "Gặp lỗi GSSAPI trong ứng dụng khách khi thuơng lượng ngữ cảnh bảo mật trong « gss_init_sec_context() » trong thư viện SASL. Chắc vì chưa có đủ thông tin xác thức hay có sự tương tác hiểm độc."
+msgid ""
+"GSSAPI error in client while negotiating security context in "
+"gss_init_sec_context() in SASL library.  This is most likely due "
+"insufficient credentials or malicious interactions."
+msgstr ""
+"Gặp lỗi GSSAPI trong ứng dụng khách khi thuơng lượng ngữ cảnh bảo mật trong "
+"« gss_init_sec_context() » trong thư viện SASL. Chắc vì chưa có đủ thông tin "
+"xác thức hay có sự tương tác hiểm độc."
 
-msgid "GSSAPI error in server while negotiating security context in gss_init_sec_context() in SASL library.  This is most likely due insufficient credentials or malicious interactions."
-msgstr "Gặp lỗi GSSAPI trong máy phục vụ khi thương lượng ngữ cảnh bảo mật trong « gss_init_sec_context() » trong thư viện SASL. Chắc vì chưa có đủ thông tin xác thức hay có sự tương tác hiểm độc."
+msgid ""
+"GSSAPI error in server while negotiating security context in "
+"gss_init_sec_context() in SASL library.  This is most likely due "
+"insufficient credentials or malicious interactions."
+msgstr ""
+"Gặp lỗi GSSAPI trong máy phục vụ khi thương lượng ngữ cảnh bảo mật trong « "
+"gss_init_sec_context() » trong thư viện SASL. Chắc vì chưa có đủ thông tin "
+"xác thức hay có sự tương tác hiểm độc."
 
-msgid "GSSAPI error while decrypting or decoding data in gss_unwrap() in SASL library.  This is most likely due to data corruption."
-msgstr "Gặp lỗi GSSAPI khi giải mã hoặc giải mật mã dữ liệu trong « gss_unwrap() » trong thư viện SASL. Chắc vì dữ liệu bị hỏng."
+msgid ""
+"GSSAPI error while decrypting or decoding data in gss_unwrap() in SASL "
+"library.  This is most likely due to data corruption."
+msgstr ""
+"Gặp lỗi GSSAPI khi giải mã hoặc giải mật mã dữ liệu trong « gss_unwrap() » "
+"trong thư viện SASL. Chắc vì dữ liệu bị hỏng."
 
-msgid "GSSAPI error while encrypting or encoding data in gss_wrap() in SASL library."
-msgstr "Gặp lỗi GSSAPI khi mã hóa hoặc mật mã hóa dữ liệu trong « gss_wrap() » trong thư viện SASL."
+msgid ""
+"GSSAPI error while encrypting or encoding data in gss_wrap() in SASL library."
+msgstr ""
+"Gặp lỗi GSSAPI khi mã hóa hoặc mật mã hóa dữ liệu trong « gss_wrap() » trong "
+"thư viện SASL."
 
-msgid "GSSAPI error acquiring credentials in gss_acquire_cred() in SASL library.  This is most likely due to not having the proper Kerberos key available in /etc/krb5.keytab on the server."
-msgstr "Gặp lỗi GSSAPI khi gọi thông tin xác thức trong « gss_acquire_cred() » trong thư viện SASL. Chắc vì không có khóa Kerberos đúng sẵn sàng trong </etc/krb5.keytab> trên máy phục vụ."
+msgid ""
+"GSSAPI error acquiring credentials in gss_acquire_cred() in SASL library.  "
+"This is most likely due to not having the proper Kerberos key available in /"
+"etc/krb5.keytab on the server."
+msgstr ""
+"Gặp lỗi GSSAPI khi gọi thông tin xác thức trong « gss_acquire_cred() » trong "
+"thư viện SASL. Chắc vì không có khóa Kerberos đúng sẵn sàng trong </etc/krb5."
+"keytab> trên máy phục vụ."
 
-msgid "GSSAPI error creating a display name denoting the client in gss_display_name() in SASL library.  This is probably because the client supplied bad data."
-msgstr "Gặp lỗi GSSAPI khi tạo tên hiển thị đối với ứng dụng khách trong « gss_display_name() » trong thư viện SASL. Chắc vì ứng dụng khách cung cấp dữ liệu sai."
+msgid ""
+"GSSAPI error creating a display name denoting the client in gss_display_name"
+"() in SASL library.  This is probably because the client supplied bad data."
+msgstr ""
+"Gặp lỗi GSSAPI khi tạo tên hiển thị đối với ứng dụng khách trong « "
+"gss_display_name() » trong thư viện SASL. Chắc vì ứng dụng khách cung cấp dữ "
+"liệu sai."
 
-msgid "Other entity requested integrity or confidentiality protection in GSSAPI mechanism but this is currently not implemented."
-msgstr "Đối thể khác yêu cầu bảo vệ sự tích hợp hay bí mật trong cơ cấu GSSAPI nhưng khả năng này chưa được thi hành."
+msgid ""
+"Other entity requested integrity or confidentiality protection in GSSAPI "
+"mechanism but this is currently not implemented."
+msgstr ""
+"Đối thể khác yêu cầu bảo vệ sự tích hợp hay bí mật trong cơ cấu GSSAPI nhưng "
+"khả năng này chưa được thi hành."
 
 msgid "SASL mechanism could not parse input"
 msgstr "Cơ cấu SASL không thể phân tách dữ liệu nhập"
@@ -74,7 +116,8 @@ msgid "Integrity error in application payload"
 msgstr "Gặp lỗi sự tích hợp trong trọng tải ứng dụng"
 
 msgid "Client-side functionality not available in library (application error)"
-msgstr "Khả năng bên ứng dụng khách không sẵn sàng trong thư viện (lỗi ứng dụng)"
+msgstr ""
+"Khả năng bên ứng dụng khách không sẵn sàng trong thư viện (lỗi ứng dụng)"
 
 msgid "Server-side functionality not available in library (application error)"
 msgstr "Khả năng bên máy phục vụ không sẵn sàng trong thư viện (lỗi ứng dụng)"
@@ -85,10 +128,12 @@ msgstr "Điều gọi chưa ghi rõ cách trở lại (lỗi ứng dụng)."
 msgid "Authentication failed because the anonymous token was not provided."
 msgstr "Không xác thức được vì chưa cung cấp hiệu bài vô danh."
 
-msgid "Authentication failed because the authentication identity was not provided."
+msgid ""
+"Authentication failed because the authentication identity was not provided."
 msgstr "Không xác thức được vì không cung cấp thông tin nhận diện để xác thức."
 
-msgid "Authentication failed because the authorization identity was not provided."
+msgid ""
+"Authentication failed because the authorization identity was not provided."
 msgstr "Không xác thức được vì không cung cấp thông tin nhận diện để xác thức."
 
 msgid "Authentication failed because the password was not provided."
@@ -121,56 +166,125 @@ msgstr "Không đóng được tập tin trong thư viện SASL"
 msgid "Cannot get internal library handle (library error)"
 msgstr "Không gọi được điều quản lý thư viện nội bộ (lỗi thư viện)"
 
-msgid "SASL mechanism needs gsasl_client_callback_anonymous() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_client_callback_anonymous() » [khách gọi trở lại vô danh] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_anonymous() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_client_callback_anonymous"
+"() » [khách gọi trở lại vô danh] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_client_callback_password() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_client_callback_password() » [khách gọi trở lại mật khẩu] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_password() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_client_callback_password() "
+"» [khách gọi trở lại mật khẩu] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_client_callback_passcode() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng gsasl_client_callback_passcode() [khách gọi trở lại mã mật khẩu] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_passcode() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng gsasl_client_callback_passcode() "
+"[khách gọi trở lại mã mật khẩu] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_client_callback_pin() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_client_callback_pin() » [khách gọi trở lại số nhận diện cá nhân] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_pin() callback (application error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_client_callback_pin() "
+"» [khách gọi trở lại số nhận diện cá nhân] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_client_callback_authorization_id() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_client_callback_authorization_id() » [khách gọi trở lại thông tin nhận diện được phép] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_authorization_id() callback "
+"(application error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « "
+"gsasl_client_callback_authorization_id() » [khách gọi trở lại thông tin nhận "
+"diện được phép] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_client_callback_authentication_id() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_client_callback_authentication_id() » [khách gọi trở lại thông tin nhận diện xác thực] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_authentication_id() callback "
+"(application error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « "
+"gsasl_client_callback_authentication_id() » [khách gọi trở lại thông tin "
+"nhận diện xác thực] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_client_callback_service() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_client_callback_service() » [khách gọi trở lại dịch vụ] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_service() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_client_callback_service() "
+"» [khách gọi trở lại dịch vụ] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_server_callback_validate() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_validate() » [khách gọi trở lại hợp lệ hóa] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_validate() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_validate() "
+"» [khách gọi trở lại hợp lệ hóa] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_server_callback_cram_md5() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_cram_md5() » (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_cram_md5() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_cram_md5() "
+"» (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_server_callback_digest_md5() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_digest_md5() » (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_digest_md5() callback "
+"(application error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_digest_md5"
+"() » (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_server_callback_anonymous() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_anonymous() » [máy phục vụ gọi trở lại vô danh] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_anonymous() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_anonymous"
+"() » [máy phục vụ gọi trở lại vô danh] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_server_callback_external() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_external() » [máy phục vụ gọi trở lại bên ngoài] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_external() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_external() "
+"» [máy phục vụ gọi trở lại bên ngoài] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_server_callback_realm() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_realm() » [máy phục vụ gọi trở lại địa hạt] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_realm() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_realm() "
+"» [máy phục vụ gọi trở lại địa hạt] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_server_callback_securid() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_securid() » [máy phục vụ gọi trở lại thông tin nhận diện bảo mật] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_securid() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_securid() "
+"» [máy phục vụ gọi trở lại thông tin nhận diện bảo mật] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_server_callback_service() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_service() » [máy phục vụ gọi trở lại dịch vụ] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_service() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_service() "
+"» [máy phục vụ gọi trở lại dịch vụ] (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_server_callback_gssapi() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_gssapi() » (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_gssapi() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_gssapi() "
+"» (lỗi ứng dụng)"
 
-msgid "SASL mechanism needs gsasl_server_callback_retrieve() callback (application error)"
-msgstr "Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_retrieve() » [máy phục vụ gọi trở lại lấy] (lỗi ứng dụng)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_retrieve() callback (application "
+"error)"
+msgstr ""
+"Cơ cấu SASL cần khả nang gọi trở lại dạng « gsasl_server_callback_retrieve() "
+"» [máy phục vụ gọi trở lại lấy] (lỗi ứng dụng)"
 
 msgid "Failed to perform Unicode Normalization on string."
 msgstr "Không tiêu chuẩn hoá dạng Unicode chuỗi."
