--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
+* Version 0.2.13 (unreleased)
+
 * Version 0.2.12 (released 2006-03-08)
 
 ** Update of gnulib files.
