--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -15,15 +15,15 @@
 This manual is last updated @value{UPDATED} for version
 @value{VERSION} of GNU SASL.
 
-Copyright @copyright{} 2002, 2003, 2004, 2005 Simon Josefsson.
+Copyright @copyright{} 2002, 2003, 2004, 2005, 2006 Simon Josefsson.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.2 or
-any later version published by the Free Software Foundation; with the
-Invariant Sections being ``Commercial Support'', no Front-Cover Texts,
-and no Back-Cover Texts.  A copy of the license is included in the
-section entitled ``GNU Free Documentation License''.
+any later version published by the Free Software Foundation; with no
+Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.  A
+copy of the license is included in the section entitled ``GNU Free
+Documentation License''.
 @end quotation
 @end copying
 
