--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.13 (unreleased)
 
+** Update of gnulib files.
+Further improves portability to MinGW.
+
 ** The manual doesn't have any invariant sections.
 
 * Version 0.2.12 (released 2006-03-08)
