--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 0.2.13 (unreleased)
+* Version 0.2.13 (released 2006-06-14)
 
 ** Update of gnulib files.
 Further improves portability to MinGW.
